crates/toml/tests/snapshots/invalid/array/missing-separator-02.stderr
TOML parse error at line 1, column 15
  |
1 | wrong = [ 1 2 3 ]
  |               ^
missing comma between array elements, expected `,`
